--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,8 +43,8 @@ jobs:
         POSTGRES_PASSWORD: soxa
         POSTGRES_USER: postgres
         POSTGRES_DB: ComplaintsTestDB
-      run: |
-        cd Complaints-System-Flask
+      run: 
+        
         python -m pip install --upgrade pip
         pip install -r requirements.txt
         export PGPASSWORD="soxa"
