--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -44,10 +44,10 @@ jobs:
         POSTGRES_USER: postgres
         POSTGRES_DB: ComplaintsTestDB
       run: 
-        
+        ./
         python -m pip install --upgrade pip
         pip install -r requirements.txt
-        export PGPASSWORD="soxa"
+        export PGPASSWORD=="soxa"
         pytest
     
      
