--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -43,9 +43,17 @@ jobs:
         POSTGRES_PASSWORD: soxa
         POSTGRES_USER: postgres
         POSTGRES_DB: ComplaintsTestDB
-      run:         
+      run:
         python -m pip install --upgrade pip
         pip install -r requirements.txt        
         pytest
-    
-     
+    - name: Check packages for vulnerability
+      pip-audit:
+        steps:
+          - uses: pypa/gh-action-pip-audit@v1.0.0
+            with:
+              inputs: requirements.txt
+    - name: Standardize(PEP8) code using module Black
+      lint:        
+        steps:          
+          - uses: psf/black@stable
