--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,3 +8,11 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
+ 
+  pip-audit:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - uses: pypa/gh-action-pip-audit@v1.0.0
+        with:
+          inputs: requirements.txt
