--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,5 +8,7 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
- 
+      - uses: pypa/gh-action-pip-audit@v1.0.6
+        with:
+          inputs: requirements.txt
 
