--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -8,7 +8,10 @@ jobs:
     steps:
       - uses: actions/checkout@v3
       - uses: psf/black@stable
+  selftest:
+    runs-on: ubuntu-latest
+    steps:
+      - uses: actions/checkout@v3
+      - name: install
+        run: python -m pip install .
       - uses: pypa/gh-action-pip-audit@v1.0.6
-        with:
-          inputs: requirements.txt
-
