--- a/.github/workflows/black.yml
+++ b/.github/workflows/black.yml
@@ -14,4 +14,4 @@ jobs:
       - uses: actions/checkout@v3
       - uses: pypa/gh-action-pip-audit@v1.0.6
         with:
-         inputs: requirements.txt dev-requirements.txt
+         inputs: requirements.txt 
