--- a/.github/workflows/python-app.yml
+++ b/.github/workflows/python-app.yml
@@ -11,11 +11,13 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: Black
       - uses: psf/black@stable
   selftest:
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v3
+      - name: pip-audit 
       - uses: pypa/gh-action-pip-audit@v1.0.6
         with:
          inputs: requirements.txt 
